[project]
name = "video_tools"
version = "0.1.0"
description = "Tools to work with mkv and other video files"
authors = [
    { name = "Anders Birkenes", email = "datagutten@datagutten.net" }
]
readme = "README.md"
requires-python = ">=3.11,<4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
mkv = [
    "pymkv2 (>=2.2.0.post1,<3.0.0)",
    "langcodes[data] (>=3.5.1,<4.0.0)"
]
